# embedded-qr

./: ASSESSMENT.md  Cargo.toml  LICENSE-MIT  README.md
examples/: std.rs
src/: builder.rs  capacity.rs  ecc.rs  eg.rs  encoder.rs  helper.rs  interleave.rs  lib.rs  matrix.rs  matrix_template.rs  types.rs  version.rs
